# Make

./: CMakeLists.txt  README.md  foo.cpp  foo.hpp  helloWorld.cpp
bar/: CMakeLists.txt  bar.cpp  bar.hpp  barhppGenerator.cpp
